@@ -7,6 +7,7 @@ version_from: lib/VMware/API/LabManager.pm
 
 requires:
   SOAP::Lite: 0
+  Crypt::SSLeay: 0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
